[gd_scene load_steps=6 format=2]

[ext_resource path="res://Entities/Characters/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Entities/Characters/Player/Battery.png" type="Texture" id=2]
[ext_resource path="res://Entities/Characters/Player/Foot.png" type="Texture" id=3]
[ext_resource path="res://Entities/Characters/Player/Face.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 63 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )
velocity_max = Vector2( 25, 75 )
h_accel = 2
h_decel = 2
gravity = 2
jump = 55
foot_speed_mult = 0.075
max_feet_lerp_val = 750.0
leg_color = Color( 0.156863, 0.0901961, 0.0431373, 1 )
max_lean_lerp_val = 1000.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -15 )
shape = SubResource( 1 )
__meta__ = {
"_edit_ik_": true
}

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="BatteryPivot" type="Node2D" parent="."]

[node name="Battery" type="Sprite" parent="BatteryPivot"]
position = Vector2( 0, -32 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_ik_": true
}

[node name="Face" type="Sprite" parent="BatteryPivot/Battery"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, 32 )
texture = ExtResource( 4 )

[node name="Feet" type="Node2D" parent="."]

[node name="LeftFootPivot" type="Position2D" parent="Feet"]
rotation = -6.31444
__meta__ = {
"_edit_ik_": true
}

[node name="LeftKnee" type="Position2D" parent="Feet/LeftFootPivot"]
position = Vector2( -32, -5.59506e-06 )
rotation = -1.4851
__meta__ = {
"_edit_bone_": true
}

[node name="LeftFoot" type="Sprite" parent="Feet/LeftFootPivot/LeftKnee"]
position = Vector2( -31.9535, 1.72525 )
rotation = 1.51335
texture = ExtResource( 3 )
__meta__ = {
"_edit_bone_": true
}

[node name="RightFootPivot" type="Position2D" parent="Feet"]
rotation = -5.12933e-20
__meta__ = {
"_edit_ik_": true
}

[node name="RightKnee" type="Position2D" parent="Feet/RightFootPivot"]
position = Vector2( 32, 0 )
rotation = 1.5708
__meta__ = {
"_edit_bone_": true
}

[node name="RightFoot" type="Sprite" parent="Feet/RightFootPivot/RightKnee"]
position = Vector2( 32, 0 )
rotation = -1.56792
texture = ExtResource( 3 )
__meta__ = {
"_edit_bone_": true
}

[node name="LeftWalkPivot" type="Node2D" parent="Feet"]
position = Vector2( -8, 48 )

[node name="LeftWalkPosition" type="Position2D" parent="Feet/LeftWalkPivot"]
position = Vector2( -16, 0 )

[node name="RightWalkPivot" type="Node2D" parent="Feet"]
position = Vector2( 8, 48 )

[node name="RightWalkPosition" type="Position2D" parent="Feet/RightWalkPivot"]
position = Vector2( 16, 0 )

[node name="LeftJumpPosition" type="Position2D" parent="Feet"]
position = Vector2( -40, 24 )

[node name="RightJumpPosition" type="Position2D" parent="Feet"]
position = Vector2( 40, 24 )

[node name="TransitionTween" type="Tween" parent="."]
